--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,17 @@ plugins {
 group = 'ru.netology'
 version = '1.0-SNAPSHOT'
 
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
+
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testImplementation platform('org.junit:junit-bom:5.9.1')
-    testImplementation 'org.junit.jupiter:junit-jupiter'
+    testImplementation 'org.testng:testng:7.1.0'
 }
 
 test {
-    useJUnitPlatform()
+    useTestNG()
 }
